# arcadia-sdk

./: .gitignore  CMakeLists.txt  README.md  index.html
cmake/: ArcadiaToy.cmake  toolchain-i686-w64-mingw32.cmake  toy.ini.in  version.ini.in
docs/: ABI.md
include/arcadia/: toy.h
re/tools/: annot.py  dump_handlers.py  find_ref.py  ged_codec.py  iat.py  ne_emu.py  nedis.py  scan_host.py  srdis.py  verify_algo.py
samples/glcube/: CMakeLists.txt  glcube.c
samples/hello/: CMakeLists.txt  hello.c
src/: arcadia_toy.c  arcadia_toy.def
tools/: soul_gen.c  soul_gen.py  spades_gen.c
tools/mixserver/: README.md  go.mod  main.go
